--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     padding-right: 10px;
     right: 0;
    margin: 0;
-   width: 30%;
+   width: 33%;
    min-height: 100%;
    background-color: lightgrey;
 }
@@ -48,6 +48,16 @@
     background-color: hotpink;
     border: solid;
     border-color:hotpink;
+}
+
+.prcinfo{
+    display: inline;
+}
+.perinfo{
+    display: inline;
+}
+.coninfo{
+    display: inline;
 }
 
 .dropbtn {
@@ -100,20 +110,55 @@
 }
 
 #container{
+    width: 50%;
     position: absolute;
     margin-right: 42%;
     top:15%;
-    left: 8%;
-  transform: translate(-8%, 0%);
+    left: 15%;
+  transform: translate(-15%, 0%);
 }
 
 #statement{
 
 }
 #leftcol{
+/*     background: -webkit-linear-gradient(left, #25c481, #25b7c4);
+  background: linear-gradient(to right, #25c481, #25b7c4);*/
+  font-family: 'Roboto', sans-serif;
     float: left;
-    width: 67%;
+    width: 66%;
    min-height: 100%;
+}
+
+.readMore {
+    background-color:#599bb3;
+    -moz-border-radius:9px;
+    -webkit-border-radius:9px;
+    border-radius:9px;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:16px;
+    font-weight:bold;
+    padding:10px 25px;
+    text-decoration:none;
+    text-shadow:-1px 1px 2px #3d768a;
+}
+.readMore:hover {
+    background-color:#408c99;
+}
+.readMore:active {
+    position:relative;
+    top:1px;
+}
+
+
+.logo{
+    position: fixed;
+    top:0;
+    left: 0;
+    height: 75px;
 }
 
  html,body { height: 100%; margin: 0px; padding: 0px; 
@@ -121,6 +166,52 @@
 body,button{
     font-family: 'Lato', sans-serif;
         font-size: 24px;
+}
 
+.tblinfo{
+   display: none;
+}
+section{
+    position: absolute;
+    margin-top: 15%;
+}
 
+table{
+  width:100%;
+  table-layout: fixed;
+}
+.tbl-header{
+  background-color: rgba(255,255,255,0.3);
+ }
+.tbl-content{
+  height:300px;
+  overflow-x:auto;
+  margin-top: 0px;
+}
+th{
+  padding: 20px 15px;
+  text-align: left;
+  font-weight: 500;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+}
+td{
+  padding: 15px;
+  text-align: left;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 15px;
+  color: #000;
+  border-bottom: solid 1px rgba(255,255,255,0.1);
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+} 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+} 
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
 }
